--- a/.editorconfig
+++ b/.editorconfig
@@ -5,9 +5,9 @@ root = true
 [*]
 charset = utf-8
 indent_size = 2
-indent_style = space
+indent_style = tab
 insert_final_newline = true
 trim_trailing_whitespace = true
 
 [*.md]
-trim_trailing_whitespace = false
+trim_trailing_whitespace = true
